# code-review-dashboard

./: .gitignore  .vscodeignore  CLAUDE.md  DEVELOPMENT.md  EXTENSION_README.md  README.md  TESTING_GUIDE.md  full_project_prd.md  package-lock.json  package.json  phase1-1_vscode_extension.md  phase1_design_doc.md  phase2-1_analysis_execution.md  phase2-2_result_dashboard.md  phase2_design_doc.md  phase3-1_ai_analysis.md  phase3_design_doc.md  tsconfig.json
backend/: .eslintrc.json  README.md  main.py  pyproject.toml  requirements.txt  test_semgrep.py
backend/api/: phase1.py  phase2.py  phase3.py
backend/config/: custom-semgrep-rules.yaml
backend/models/: schemas.py
backend/services/: ai_analyzer.py  analysis_orchestrator.py  custom_pattern_analyzer.py  file_scanner.py  filter_service.py  javascript_analyzer.py  ollama_client.py  prompt_builder.py  python_analyzer.py  semgrep_analyzer.py  semgrep_setup.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  test-security.ts  vscode.d.ts
frontend/src/components/: AIProgressModal.tsx  AIResultModal.tsx  Charts.tsx  FileTreeViewer.tsx  FilterBar.tsx  FilterConfiguration.tsx  IssueDetailModal.tsx  IssueList.tsx  LiveIssueSummary.tsx  ProgressBar.tsx  ProjectSelector.tsx  SummaryCards.tsx
frontend/src/pages/: DashboardPage.tsx  Phase1Page.tsx  Phase2Page.tsx  SetupPage.tsx
frontend/src/stores/: aiAnalysisStore.ts  dashboardStore.ts  (+2 more)
src/: dashboardPanel.ts  extension.ts  ollamaManager.ts  pythonServer.ts  setupManager.ts
(+2 files in other folders)
